add basic components and pages to welcome screen

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "placemark-sveltekit",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "author": "Tibor Molnar",
+  "license": "MIT",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "svelte": "^3.57.0",
