--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "placemark-sveltekit",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "author": "Tibor Molnar",
-  "license": "MIT",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "svelte": "^3.57.0",
     "vite": "^4.3.2"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
