--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "Tibor Molnar",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "prettier": "^2.6.1",
     "svelte": "^3.57.0",
     "vite": "^4.3.2"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "sanitize-html": "^2.10.0",
-    "svelte-spa-router": "^3.3.0"
+    "svelte-spa-router": "^3.3.0",
+    "leaflet": "^1.7.1",
+    "svelte-frappe-charts": "^1.9.2"
   }
 }
