--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "sanitize-html": "^2.10.0",
-    "svelte-spa-router": "^3.3.0",
     "leaflet": "^1.7.1",
-    "svelte-frappe-charts": "^1.9.2"
+    "sanitize-html": "^2.10.0",
+    "svelte-bricks": "^0.1.7",
+    "svelte-frappe-charts": "^1.9.2",
+    "svelte-lightweight-charts": "^2.2.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
