--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Tibor Molnar",
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.88",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "prettier": "^2.6.1",
     "svelte": "^3.57.0",
