--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "placemark-sveltekit",
   "private": true,
-  "version": "0.0.0",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -9,25 +8,22 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "author": "Tibor Molnar",
   "devDependencies": {
+    "@sveltejs/adapter-netlify": "^1.0.0-next.88",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
+    "prettier": "^2.6.1",
     "svelte": "^3.57.0",
-    "vite": "^4.3.2",
-    "author": "Tibor Molnar",
-    "devDependencies": {
-      "@sveltejs/adapter-netlify": "^1.0.0-next.88",
-      "@sveltejs/vite-plugin-svelte": "^2.0.3",
-      "prettier": "^2.6.1",
-      "svelte": "^3.57.0",
-      "vite": "^4.3.2"
-    },
-    "dependencies": {
-      "axios": "^1.4.0",
-      "leaflet": "^1.7.1",
-      "sanitize-html": "^2.10.0",
-      "svelte-frappe-charts": "^1.9.2",
-      "svelte-spa-router": "^3.3.0",
-      "svelte-lightweight-charts": "^2.2.0"
-    }
+    "vite": "^4.3.2"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "leaflet": "^1.7.1",
+    "sanitize-html": "^2.10.0",
+    "svelte-bricks": "^0.1.7",
+    "svelte-frappe-charts": "^1.9.2",
+    "svelte-image-gallery": "^1.7.0",
+    "svelte-lightweight-charts": "^2.2.0",
+    "svelte-spa-router": "^3.3.0"
   }
 }
