--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.106",
     "axios": "^1.4.0",
     "leaflet": "^1.7.1",
     "sanitize-html": "^2.10.0",
